src/riot-rs-macros/tests/ui/main/non_async_fn_missing_spawner_param.stderr
error: custom attribute panicked
 --> tests/ui/main/non_async_fn_missing_spawner_param.rs:6:1
  |
6 | #[riot_rs::main]
  | ^^^^^^^^^^^^^^^^
  |
  = help: message: the function must be async
